--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@astrojs/react": "^0.4.2",
+    "@astrojs/tailwind": "^0.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
