--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@astrojs/react": "^0.4.2",
     "@astrojs/tailwind": "^0.2.5",
+    "@astrojs/vue": "^0.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
