--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrojs/react": "^0.4.2",
     "@astrojs/tailwind": "^0.2.5",
     "@astrojs/vue": "^0.5.0",
+    "dayjs": "^1.11.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vue": "^3.2.37",
