--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "devDependencies": {
     "@astrojs/cloudflare": "^0.4.0",
     "@astrojs/react": "^0.4.2",
+    "@astrojs/svelte": "^0.5.1",
     "@astrojs/tailwind": "^0.2.5",
     "@astrojs/vue": "^0.5.0",
     "dayjs": "^1.11.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "svelte": "^3.46.4",
     "vue": "^3.2.37",
     "web-streams-polyfill": "^3.2.1",
     "wrangler": "^2.0.23"
