--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/iemong/astro-training#readme",
   "dependencies": {
-    "astro": "^1.0.0-rc.1"
+    "astro": "^1.0.0-rc.1",
+    "dexie": "^3.2.2"
   },
   "devDependencies": {
     "@astrojs/cloudflare": "^0.4.0",
