--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/iemong/astro-training#readme",
   "dependencies": {
+    "@nanostores/vue": "^0.5.5",
     "astro": "^1.0.0-rc.1",
     "dexie": "^3.2.2",
     "nanostores": "^0.6.0"
